# corrOT

./: .gitmodules  CMakeLists.txt  IntMod.cpp  IntMod.hpp  IntMod.tpp  OT.cpp  OT.hpp  OT.tpp  PRG.cpp  README.md  Receiver.tpp  Sender.hpp  Sender.tpp  Tools.cpp  Tools.hpp  Tools.hpp.in  main.cpp
OTExtensionBristol/: Makefile
OTExtensionBristol/OT/: BaseOT.h  OTExtension.cpp  OTExtensionWithMatrix.cpp
OTExtensionBristol/SimpleOT/: Makefile  README.md  ot_receiver.h  ot_sender.h
include/: IntMod.hpp  OT.hpp  PRG.hpp  Tools.hpp
include/Communication/: Comm.hpp
include/OT/: OT.hpp  OTBatch.hpp  OTExtensionBristol.hpp
src/: OT.cpp  OTExtensionBristol.cpp  PRG.cpp  Receiver.tpp  Sender.tpp  Tools.cpp
src/Communication/: Comm.cpp
src/OT/: OTExtensionBristol.cpp
test/: test.cpp
